arrumando o bug de visibilidade no desktop
arrumando o bug de visibilidade dos detalhes no desktop

--- a/src/style.css
+++ b/src/style.css
@@ -162,6 +162,7 @@ h1{
     flex-direction: column;
     padding: 5px;
     border-radius: 5px;
+    overflow-y: scroll;
 }
 
 .close {
